feat: Adds getDiveMetadata
